public class AnimationUtilities
{
    public static string IS_MOVING = "IsMoving";
    public static string IS_WALKING = "IsWalking";
    public static string IS_RUNNING = "IsRunning";

    public static string IS_GROUND = "IsGround";
    public static string Y_VELOCITY = "Y_Velocity";
    public static string IS_DASHING = "IsDashing";
    public static string TELEPORT = "Teleport";

    public static string JUMP = "Jump";

    public static string IS_WALL = "IsWall";
    public static string IS_CEILING = "IsCeiling";

    public static string ATTACK = "Attack";
    public static string ATTACK_MELEE = "AttackMelee";
    public static string DARK_ORB = "DarkOrb";

    public static string CAN_MOVE = "CanMove";
    public static string HURT = "Hurt";
    public static string DIE = "Die";
    public static string ACTIVATE = "Activate";

    // Ledge grab
    public static string IS_LEDGE_GRABBING = "IsLedgeGrabbing";
}
